:recycle: backport to 1.20.1 :bug: fix BrCube face data